<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  android:layout_marginLeft="16dp"
  android:layout_marginTop="8dp"
  android:layout_marginRight="16dp"
  android:layout_marginBottom="8dp"
  android:orientation="vertical">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:src="@drawable/bg_landscape" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="8dp"
    android:text="@string/hi_msg"
    android:textColor="#7A7A7A"
    android:textSize="18sp"
    android:textStyle="bold" />

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/enter_email"
    android:inputType="text"
    android:paddingLeft="16dp" />


  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1" />

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#96EE98"
      android:padding="4dp"
      android:text="@string/subscribe"
      android:textColor="#FFFFFF" />
  </LinearLayout>

</LinearLayout>